# Backgammon

./: CMakeLists.txt  README.md  client.cpp  game.cpp  main.cpp  server.cpp
demos/pendulum/: pendulum.ipynb
game/: backgammon.cpp  backgammon.h
game/backgammon/: backgammon.cpp  backgammon.h
game/mode/: bot.cpp  local.cpp  network.cpp
game/mode/network/: event_handler.cpp  network.cpp
game/mode/network/client/: BackgammonClient.cpp  BackgammonClient.h
game/mode/network/event/: Event.cpp  Event.h
game/mode/network/server/: BackgammonServer.cpp  BackgammonServer.h  event.cpp
game/player/: player.cpp  player.h
game/type/: types.h
server/socket/client/: ClientSocket.h
server/socket/server/: ServerSocket.h
socket/client/: Client.cpp  Client.h  ClientSocket.cpp  ClientSocket.h
socket/exception/: socket_exception.cpp  socket_exception.h
socket/server/: Server.cpp  Server.h  ServerSocket.cpp  ServerSocket.h
